about page edit

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by sammy. It uses mapbox and weatherstack APIs.</p>
             <img class="portrait" src="/img/Robot.jpg" alt="test image">
         </div>
         {{>footer}}
